adding new routes

--- a/src/app/components/main-content/layout/pages/product-home/product-list/product-list.component.html
+++ b/src/app/components/main-content/layout/pages/product-home/product-list/product-list.component.html
@@ -33,8 +33,16 @@
     <img src="" alt="" />
     <h5>Bags</h5>
   </a>
-  <div>
+  <a [routerLink]="['/product/cosmetics']">
     <img src="" alt="" />
-    <h5>Makeup</h5>
-  </div>
+    <h5>Cosmetics</h5>
+  </a>
+  <a [routerLink]="['/product/dress']">
+    <img src="" alt="" />
+    <h5>Dress</h5>
+  </a>
+  <a [routerLink]="['/product/accessories']">
+    <img src="" alt="" />
+    <h5>Accessories</h5>
+  </a>
 </div>
