--- a/src/app/components/main-content/layout/pages/product-home/bags/bags.component.html
+++ b/src/app/components/main-content/layout/pages/product-home/bags/bags.component.html
@@ -11,31 +11,43 @@
   <nav>
     <ul>
       <li>
-        <a>Bags</a>
+        <a>Purses</a>
       </li>
       <li>
-        <a>Cosmetics</a>
+        <a>Designer Bags</a>
       </li>
       <li>
         <a>Dress</a>
       </li>
       <li>
-        <a>Accessories</a>
+        <a>Shoulder Bags</a>
       </li>
       <li>
-        <a>Bags</a>
+        <a>Travel Bags</a>
       </li>
     </ul>
   </nav>
 </div>
 
 <div class="product-list-container">
-  <div>
+  <div [routerLink]="['rings']">
     <img src="" alt="" />
-    <h5>Bags</h5>
+    <h5>Purses</h5>
   </div>
   <div>
     <img src="" alt="" />
-    <h5>Makeup</h5>
+    <h5>Designer Bags</h5>
+  </div>
+  <div>
+    <img src="" alt="" />
+    <h5>Dress</h5>
+  </div>
+  <div>
+    <img src="" alt="" />
+    <h5>Shoulder Bags</h5>
+  </div>
+  <div>
+    <img src="" alt="" />
+    <h5>Travel Bags</h5>
   </div>
 </div>
