--- a/src/app/components/main-content/layout/pages/product-home/sub-category/sub-category.component.html
+++ b/src/app/components/main-content/layout/pages/product-home/sub-category/sub-category.component.html
@@ -1,1 +1,6 @@
-<p>sub-category works!</p>
+@for (product of subProducts; track $index) {
+<div>
+  <div class="product-name">{{ product.brands }}</div>
+  <p>{{ product.description }}</p>
+</div>
+}
